<resources>
    <string name="app_name">androidRestaurantV2</string>

    <string name="loading_image">Image de chargement</string>
    <string name="desc_image_food">image de nourriture</string>

    <string name="main_information_msg_start">Merci de patienter pendant le chargement de la page</string>
    <string name="main_information_msg_long">Chargement long, veuillez verifier votre connexion internet</string>
    <string name="main_information_msg_end">Chargement terminé !</string>
    <string name="main_information_msg_error">Une erreur a été recontré</string>

    <string name="main_tips_1">Le saviez vous ? un cyclope ne met pas de lunette mais une lunette</string>
    <string name="main_tips_2">Le saviez vous ? une vélo possède 2 roues, comme les dromadaires</string>

    <string name="titleMenu">Que veux tu manger ?</string>
    <string name="titleShop">Welcome</string>

    <string name="less_unity">less unity</string>
    <string name="more_unity">more unity</string>
    <string name="food_view">food view</string>
    <string name="store">Store</string>
    <string name="buttonPay">Payer</string>

    <string name="changeToSignUp">Sign Up</string>
    <string name="changeToSignIn">Sign in</string>
    <string name="callBackName">Se souvenir du nom</string>

    <string name="buttonConnexion">Connexion</string>
    <string name="buttonInscription">Inscription</string>

    <string name="emailChamp">Entrez votre email</string>
    <string name="emailHolder">Email</string>

    <string name="passwordChamp">Entrez votre mot de passe</string>
    <string name="passwordHolder">Mot de passe</string>

    <string name="addressChamp">Adresse</string>
    <string name="addressHolder">Adresse</string>

    <string name="rePasswordChamp">Mot de passe verification</string>
    <string name="rePasswordHolder">Mot de passe</string>

    <string name="lastnameChamp">Nom</string>
    <string name="lastnameHolder">Nom</string>

    <string name="firstnameChamp">Prénom</string>
    <string name="firstnameHolder">Prénom</string>

    <string name="error_mail">Bad email</string>
    <string name="error_password">Bad password</string>
    <string name="error_password_not_same">Bad password verify</string>
    <string name="error_not_all_enter">Also a shop is empty!</string>

    <string name="error_inscription_back">Something was wrong</string>
    <string name="error_connexion_back">Something was wrong</string>
    <string name="refrech">refrech</string>
    <string name="default_value_0">0</string>

    <string name="buttonSeeMenu">Voir le menu</string>
    <string name="recharge">Recharger</string>
    <string name="buttonLogOut">Deconnection</string>
    <string name="google_map">Google map</string>
    <string name="last_order_button">derniere commande</string>
    <string name="buttonBackSafePlace">Retourner en lieu sûr</string>
    <string name="error_text_message">Quelque chose c\'est mal produit</string>
    <string name="validation_command">la commande a été effectué</string>
    <string name="wait_command">la commande est en cours</string>
    <string name="last_order">Dernieres commandes</string>
    <string name="re_do_commande">Reprendre (supprime le panier actuelle)</string>
</resources>