<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstnameChamp" />

        <EditText
            android:id="@+id/prenomIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/firstnameHolder"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastnameChamp" />

        <EditText
            android:id="@+id/nomIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/lastnameHolder"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailChamp" />

        <EditText
            android:id="@+id/emailIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/emailHolder"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addressChamp" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/addressHolder"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordChamp" />

        <EditText
            android:id="@+id/pass1In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/passwordHolder"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rePasswordChamp" />

        <EditText
            android:id="@+id/pass2In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/rePasswordHolder"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <Button
            android:id="@+id/InIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonInscription" />

        <TextView
            android:id="@+id/ch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeToSignIn" />
    </LinearLayout>
</FrameLayout>