<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/mainInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_information_msg_start"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_image_load"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/loading_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainInformation" />

    <TextView
        android:id="@+id/mainTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_tips_1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/mainInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSeeMenu"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainInformation"
        tools:visibility="visible" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonConnexion"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/main_image_load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainInformation"
        tools:visibility="visible" />

    <Button
        android:id="@+id/inscript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonInscription"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect"
        tools:visibility="visible" />

    <Button
        android:id="@+id/retryCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/main_image_load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainInformation"
        tools:visibility="visible" />

    <Button
        android:id="@+id/deco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogOut"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainInformation"
        tools:visibility="visible" />

    <Button
        android:id="@+id/keepOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_order_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deco"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>